compiler/tests/fail/arm-m4/add_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #ADD(x, 0x0000caca);
    [x] = x;
}
